<resources>
    <string name="app_name">FintechA75</string>
    <string name="title_activity_login_client">LoginClientActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- My strings-->
    <string name="first_question">¿Qué eres?</string>

    <string name="registration">Registro</string>
    <string name="catch_number">Se capturarán 5 muestras de la misma huella</string>

    <string name="successful_register">Se han registrado los datos satisfactoriamente</string>
    <string name="failure_register">Se ha producido un error al registrar los datos. Favor de intentarlo nuevamente.</string>

    <string name="successful_movement">El movimiento se ha realizado satisfactoriamente</string>
    <string name="failure_movement">Se ha producido un error al realizar el movimiento. Favor de intentarlo nuevamente.</string>

    <string name="password_instruction">Escriba la contaseña del establecimiento:</string>
    <string name="password_instruction_client">Escriba su contaseña:</string>
    <string name="password_instruction_paypal">Escriba la contaseña de Paypal</string>

    <string name="market_password">Contraseña del Establecimiento</string>
    <string name="branch_password">Contraseña de la Sucursal</string>
    <string name="paypal_account">Cuenta de PayPal</string>
    <string name="fingerprint_text">Huella Dactilar</string>

    <!-- menu strings -->
    <string name="menu">Menú</string>
    <string name="credit">Crédito</string>
    <string name="movements">Movimientos</string>
    <string name="profile">Perfil</string>
    <string name="client_text">Cliente</string>
    <string name="market_text">Establecimiento</string>
    <string name="branches_text">Sucursales</string>
    <string name="movements_with_colon">Movimientos:</string>
    <string name="new_credit">Nuevo Crédito</string>
    <string name="filter_values">Filtrar Créditos y Recibos</string>

    <!-- button strings -->
    <string name="sing_in">Ingresar</string>
    <string name="sing_up">Crear Cuenta</string>
    <string name="save">Guardar</string>
    <string name="add">Añadir</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="catch_fingerprint">Capturar Huella</string>
    <string name="connect_sensor">Conectar sensor</string>
    <string name="accept">Aceptar</string>
    <string name="add_branch">Agregar Sucursal</string>
    <string name="confirm">Confirmar</string>
    <string name="check_password">Checar</string>
    <string name="modify">Modificar</string>
    <string name="pay">Pagar</string>
    <string name="transfer">Transferir</string>
    <string name="deposit">Depositar</string>
    <string name="create_credit">Crear Crédito</string>
    <string name="higher_than_zero"><![CDATA[Créditos > 0]]></string>
    <string name="equal_to_zero">Créditos = 0</string>
    <string name="payments">Pagos</string>
    <string name="transfers">Transferencias</string>
    <string name="deposits">Depósitos</string>

    <!-- edit text title strings -->
    <string name="market_name">Nombre del Establecimiento</string>
    <string name="email">Correo Electrónico</string>
    <string name="type_market">Tipo de Comercio</string>
    <string name="rfc">RFC* (Opcional)</string>
    <string name="password">Contraseña</string>
    <string name="rewrite_password">Reescriba la Contraseña </string>
    <string name="branch_name">Nombre de la Sucursal</string>
    <string name="hours_of_operation">Horario</string>
    <string name="zip_code">Código Postal</string>
    <string name="state">Estado</string>
    <string name="city">Ciudad</string>
    <string name="street">Calle</string>
    <string name="outside_number">Número Exterior</string>
    <string name="inner_number">Número Interior* (Opcional)</string>
    <string name="client_name">Nombre(s)</string>
    <string name="client_lastname">Apellido(s)</string>
    <string name="client_email">Correo Electrónico del Cliente</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="client_paypal">Cuenta PayPal* (Opcional)</string>
    <string name="market_paypal">Cuenta PayPal</string>
    <string name="credit_number">Número de Crédito</string>
    <string name="market_number">Número de Establecimiento</string>
    <string name="amount_title">Monto</string>
    <string name="depositor_name">Nombre del depositante</string>
    <string name="origin_number_credit">Número de Crédito Origen</string>
    <string name="destination_number_credit">Número de Crédito Destino</string>

    <!-- underline strings -->
    <string name="market_details"><u>Datos del Establecimiento</u></string>
    <string name="paypal"><u>PayPal</u></string>
    <string name="branch_details"><u>Datos de la Sucursal</u></string>
    <string name="branch_address"><u>Dirección de la Sucursal</u></string>
    <string name="client_details"><u>Datos Personales</u></string>
    <string name="client_address"><u>Dirección</u></string>
    <string name="fingerprint"><u>Huella Dactilar</u></string>
    <string name="instruction_sensor"><u>Favor de conectar el sensor primero antes de capturar la huella</u></string>
    <string name="profile_modifying"><u>Modificaciones a Perfil</u></string>

    <!-- hint strings -->
    <string name="hint_paypal">mypaypalemail@email.com</string>
    <string name="hint_inner_number">Número Interior</string>
    <string name="hint_zip_code">03511</string>
    <string name="hint_hours">08:00 – 17:00</string>
    <string name="hint_rfc">RFC</string>
    <string name="hint_date">05/09/1996</string>
    <string name="credit_id">Crédito ID</string>
    <string name="name_field">Nombre Nombre Apellido Apellido</string>
    <string name="amount_field">$145663.00</string>
    <string name="movement_field">Tipo Movimiento</string>
    <string name="extra_information">Información Extra</string>
    <string name="amount_example">0.00</string>
    <string name="hint_email">myemail@mail.com</string>
    <string name="store_name_example">Tacos de 10</string>

    <!-- extra strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_button">return button</string>
    <string name="settings_button">settings button</string>
    <string name="search">Buscar</string>


</resources>