<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".TransferFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlTransferMovement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/middle_margin"
            android:layout_marginTop="@dimen/middle_margin"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@drawable/shape_main_button">

            <ImageView
                android:id="@+id/ivTransferMovementBackspace"
                android:layout_width="@dimen/width_app_icon_36"
                android:layout_height="@dimen/height_app_icon_36"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/small_margin"
                android:contentDescription="@string/return_button"
                android:src="@drawable/ic_baseline_keyboard_backspace_24">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/transfer"
                android:textColor="@color/mate_white"
                android:textSize="@dimen/big_icon_title"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:id="@+id/ivTransferMovementSettings"
                android:layout_width="@dimen/width_app_icon_36"
                android:layout_height="@dimen/height_app_icon_36"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/small_margin"
                android:contentDescription="@string/settings_button"
                android:src="@drawable/ic_settings_24">

            </ImageView>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDataTransfer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlTransferMovement"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/middle_margin"
            android:background="@color/mate_white"
            app:cardCornerRadius="@dimen/small_round_corner">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginTop="@dimen/small_middle_margin"
                        android:text="@string/origin_number_credit"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h2_text"
                        android:textStyle="bold">

                    </TextView>

                    <EditText
                        android:id="@+id/etTransferMovementIdCreditOrigin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/small_middle_margin"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/credit_number"
                        android:padding="@dimen/small_margin"
                        android:textSize="@dimen/edit_text_size">

                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginTop="@dimen/small_middle_margin"
                        android:text="@string/destination_number_credit"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h2_text"
                        android:textStyle="bold">

                    </TextView>

                    <EditText
                        android:id="@+id/etTransferMovementIdCreditDestination"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/small_middle_margin"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/credit_number"
                        android:padding="@dimen/small_margin"
                        android:textSize="@dimen/edit_text_size">

                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginTop="@dimen/small_middle_margin"
                        android:text="@string/amount_title"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h2_text"
                        android:textStyle="bold">

                    </TextView>

                    <EditText
                        android:id="@+id/etTransferMovementAmount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/small_middle_margin"
                        android:background="@drawable/shape_edit_text"
                        android:hint="@string/amount_example"
                        android:padding="@dimen/small_margin"
                        android:textSize="@dimen/edit_text_size">

                    </EditText>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/middle_margin"
                        android:layout_marginTop="@dimen/small_middle_margin"
                        android:text="@string/instruction_sensor"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/h2_text"
                        android:textStyle="bold">

                    </TextView>

                    <Button
                        android:id="@+id/bTransferMovementConnectSensor"
                        android:layout_width="@dimen/middle_width_button"
                        android:layout_height="@dimen/middle_height_button"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/middle_margin"
                        android:background="@drawable/shape_secondary_button"
                        android:enabled="true"
                        android:text="@string/connect_sensor"
                        android:textColor="@color/mate_white"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/ivTransferMovementFingerprint"
                        android:layout_width="@dimen/width_fingerprint_image"
                        android:layout_height="@dimen/height_fingerprint_image"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/middle_margin"
                        android:background="@color/background"
                        android:src="@drawable/ic_fingerprint_24" />

                    <Button
                        android:id="@+id/bTransferMovementCatchFingerprint"
                        android:layout_width="@dimen/middle_width_button"
                        android:layout_height="@dimen/middle_height_button"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/middle_margin"
                        android:background="@drawable/shape_disable_button"
                        android:enabled="false"
                        android:text="@string/catch_fingerprint"
                        android:textColor="@color/mate_white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bTransferMovementTransfer"
                        android:layout_width="@dimen/big_width_button"
                        android:layout_height="@dimen/big_height_button"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/big_margin"
                        android:layout_marginBottom="@dimen/middle_margin"
                        android:background="@drawable/shape_main_button"
                        android:enabled="false"
                        android:text="@string/transfer"
                        android:textColor="@color/mate_white"
                        android:textSize="@dimen/highlight_text"
                        android:textStyle="bold">

                    </Button>

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>